crates/iroha_derive/tests/ui_fail/from_variant_same_type.rs
#[derive(iroha_derive::FromVariant)]
enum Enum {
    Variant1(i32),
    Variant2(i32),
}

fn main() {}
